tests/baselines/reference/abstractPropertyNegative.errors.txt
tests/cases/compiler/abstractPropertyNegative.ts(10,7): error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'prop' from class 'B'.
tests/cases/compiler/abstractPropertyNegative.ts(10,7): error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'raw' from class 'B'.


==== tests/cases/compiler/abstractPropertyNegative.ts (2 errors) ====
    interface A {
        prop: string;
        m(): void;
    }
    abstract class B implements A {
        abstract prop: string;
        abstract raw: string;
        abstract m(): void;
    }
    class C extends B {
          ~
!!! error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'prop' from class 'B'.
          ~
!!! error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'raw' from class 'B'.
        m() { }
    }